@@ -11,7 +11,12 @@
           to gm2lcc so it can remove these objects from
           being automatically included in the archive.
 	* testsuite/gm2/pim/run/pass/nestedwith3.mod:  corrected module
-	  name.
+          name.
+	* gm2/Make-lang.in:  compile and install getopt/GetOpt.
+	* gm2/gm2-libs-ch/getopt.c:  New file.
+	* gm2/gm2-libs/getopt.def:  New file.
+	* gm2/gm2-libs/GetOpt.def:  New file.
+	* gm2/gm2-libs/GetOpt.mod:  New file.
 
 2017-07-21      Gaius Mulley <gaius@gnu.org>
 
